# gta5rp

./: .gitignore  README.md  manage.py  pyproject.toml
authentication/: models.py  urls.py  views.py
authentication/templates/authentication/: login.html
claims/: urls.py  views.py
claims/templates/claims/: index.html
documents/: urls.py  views.py
documents/templates/documents/: index.html
judiciary/: asgi.py  settings.py  urls.py  wsgi.py
